@@ -1,33 +1,73 @@
-buildscript {
-    repositories { 
-        mavenLocal() 
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.2.RELEASE")
-        classpath("net.researchgate:gradle-release:2.6.0")
-    }
-}
+/*
+ * Copyright 2023 Karlsruhe Institute of Technology.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 plugins { 
-    id 'io.franzbecker.gradle-lombok' version '1.14'
-    id 'java'
-    id 'maven'
-    id 'idea'
-    id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+    id "org.springframework.boot" version "2.7.7"
+    id "io.freefair.lombok" version "6.6.1"
+    id "io.freefair.maven-publish-java" version "6.6.1"
+    id "io.spring.dependency-management" version "1.1.0" 
+    id "org.owasp.dependencycheck" version "7.4.4"
+    id "com.jfrog.bintray" version "1.8.5"
+    id "java"
+    id "jacoco"
+    // plugins for release and publishing to maven repo
+    id "signing"
+    id "net.researchgate.release" version "3.0.2"
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+    id 'maven-publish'
 }
 
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+ext { 
+    springBootVersion = '2.7.7' 
+    springDocVersion  = '1.6.14'
+}
 
+description = 'Generic message consumer for RabbitMQ'
 group = 'edu.kit.datamanager'
-archivesBaseName = "generic-message-consumer"
-version = project['version']
+
+println "Running gradle version: $gradle.gradleVersion"
+println "Building ${name} version: ${version}"
+println "JDK version: ${JavaVersion.current()}"
+
+repositories {
+    mavenLocal() 
+    mavenCentral()
+}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+dependencies {
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-amqp"
+
+    implementation "commons-io:commons-io:2.11.0"
+    implementation "org.apache.httpcomponents:httpclient:4.5.13"
+
+    implementation "edu.kit.datamanager:service-base:1.1.0"
+    //driver for h2
+    implementation "com.h2database:h2:2.1.214"
+
+    testImplementation "junit:junit"
+}
+
+if (project.hasProperty('deploy')) {
+    println 'Using deploy profile for building ' + project.getName()
+   apply from: 'gradle/profile-deploy.gradle'
+}
 
 bootJar {
     baseName = 'generic-message-consumer'
@@ -35,29 +75,65 @@ bootJar {
 }
 
 jar {
-    enabled = true
+    archiveBaseName = 'generic-message-consumer'
+    // version is defined in file 'gradle.properties'
+    archiveVersion = System.getenv('version')
 }
 
-repositories {
-    mavenLocal() 
-    jcenter()
-    mavenCentral()
-}
- 
-dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-amqp")
-    implementation("edu.kit.datamanager:service-base:0.2.0")
-    implementation group: 'com.h2database', name: 'h2', version: '1.3.148'
-
-    testImplementation("junit:junit")
+jacoco {
+    toolVersion = "0.8.7"
 }
 
-lombok {
-    version = '1.18.10'
-    sha256 = ""
+tasks.withType(Test) {
+    // Allow access to internal methods used by powerMockito
+    // Will fail with Java17
+    if (!JavaVersion.current().isJava8()) {
+        jvmArgs '--illegal-access=permit'
+    }
+    testLogging {
+        events 'started', 'passed'
+    }
 }
 
-if (project.hasProperty('deploy')) {
-    println 'Using deploy profile for building ' + project.getName()
-   apply from: 'gradle/profile-deploy.gradle'
+jacocoTestReport {
+    reports {
+        xml.required = true
+        html.required = true
+    }
+    
+    afterEvaluate {
+        //exclude some classes/package from code coverage report
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [\
+                //pure entity package currently not needed
+                'org/datacite/**', \
+                'org/purl/**', \
+                //performance tests
+                'edu/kit/datamanager/perf/**', \
+                //remove AuthenticationHelper tests due to mocking -> code coverage cannot be determined
+                //'edu/kit/datamanager/util/AuthenticationHelper*',
+                //deprecated stuff
+                'edu/kit/datamanager/util/DCTransformationHelper*',
+                'edu/kit/datamanager/dao/ByExampleSpecification*',
+                'edu/kit/datamanager/controller/hateoas/**',
+                //exceptions 
+                'edu/kit/datamanager/exceptions/**',
+                'edu/kit/datamanager/service/impl/RabbitMQMessagingService*',
+                'edu/kit/datamanager/configuration/**',
+                'edu/kit/datamanager/service/IGenericService*'
+            ])
+        }))
+    }
+}
+
+dependencyManagement {
+    imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
+}
+
+if (JavaVersion.current().isJava8Compatible()) {
+    allprojects {
+        tasks.withType(Javadoc) {
+            options.addStringOption('Xdoclint:none', '-quiet')
+        }
+    }
 }
